// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`div bar layout with child width 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red;display:table"
>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:0;width:100px;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div
        style="width:100px"
      />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:10px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:10px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`div bar layout with multiple child width 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red;display:table"
>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:0;width:10px;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div
        style="width:10px"
      />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:10px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:10px;width:20px;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div
        style="width:20px"
      />
    </div>
  </div>
</div>
`;

exports[`div bar layout with numeric spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red;display:table"
>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:0;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:10px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:10px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`div bar layout with string multi-spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red;display:table"
>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:0;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:20px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
  <div
    class="e10 e0 e1 e2 e3 e4"
    style="display:table-cell;vertical-align:middle;padding-left:20px;width:auto;box-sizing:content-box !important"
  >
    <div
      class=" e0 e1 e2 e3 e4"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`div grid layout with numeric spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:1px;padding-left:1px"
  >
    <div
      class=" e0 e1 e2 e3 e4"
      style="margin-top:-11px;margin-left:-11px"
    >
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:10px;width:auto"
      >
        <div />
      </div>
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:10px;width:auto"
      >
        <div />
      </div>
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:10px;width:auto"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="display:table;clear:both"
  />
</div>
`;

exports[`div grid layout with string multi-spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:1px;padding-left:1px"
  >
    <div
      class=" e0 e1 e2 e3 e4"
      style="margin-top:-11px;margin-left:-21px"
    >
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:20px;width:auto"
      >
        <div />
      </div>
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:20px;width:auto"
      >
        <div />
      </div>
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:20px;width:auto"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="display:table;clear:both"
  />
</div>
`;

exports[`div grid layout with string spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:1px;padding-left:1px"
  >
    <div
      class=" e0 e1 e2 e3 e4"
      style="margin-top:-11px;margin-left:-11px"
    >
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:10px;width:auto"
      >
        <div />
      </div>
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:10px;width:auto"
      >
        <div />
      </div>
      <div
        class=" e0 e1 e2 e3 e4"
        style="float:left;margin-top:10px;margin-left:10px;width:auto"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="display:table;clear:both"
  />
</div>
`;

exports[`div no layout 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <p>
    Hello
  </p>
  <p>
    World!
  </p>
  <div
    class=" e0 e1 e2 e3 e4"
    style="display:table;clear:both"
  />
</div>
`;

exports[`div stack layout with numeric spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:0"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:10px"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:10px"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
</div>
`;

exports[`div stack layout with string multi-spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:0"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:10px"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:10px"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
</div>
`;

exports[`div stack layout with string spacing 1`] = `
<div
  class=" e0 e1 e2 e3 e4"
  style="background:red"
>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:0"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:10px"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
  <div
    class=" e0 e1 e2 e3 e4"
    style="padding-top:10px"
  >
    <div />
    <div
      class=" e0 e1 e2 e3 e4"
      style="display:table;clear:both"
    />
  </div>
</div>
`;
